--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&family=Rufina:wght@400;700&family=Ubuntu:wght@300;700&family=Urbanist:ital,wght@0,100;1,100&display=swap"
         rel="stylesheet">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <link rel="stylesheet" href="/assets/styles/styles.css">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="./assets/styles/styles.css">
     <title>Tool Storage</title>
 </head>
 
@@ -38,13 +38,14 @@
             </i>
             Lista de productos
         </h2>
-        <p class="parrafo-lista-productos my-2"> En esta sección puede editar o eliminar la herramienta seleccionada:</p>
+        <p class="parrafo-lista-productos my-2"> En esta sección puede editar o eliminar la herramienta seleccionada:
+        </p>
         <form id="formulario">
             <input type="text" id="herramienta" class="form-control">
             <button type="submit" class="boton-agregar btn btn-primary my-2">Agregar</button>
         </form>
 
-        <div class="listaHerramientas mt-3">
+        <div class="listaHerramientas mt-3" id="listaHerramientas">
             <div class="alert alert-secondary" role="alert">
                 <i class="icono-texto-alerta material-icons">
                     home_repair_service
@@ -60,16 +61,19 @@
                 </span>
             </div>
         </div>
-        
-
     </main>
     <footer>
     </footer>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
-    <script src="app.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"
+        integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js"
+        integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy"
+        crossorigin="anonymous"></script>
+    <script src="./assets/js/app.js"></script>
 </body>
 
 </html>
