Creada la función crear

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </p>
         <form id="formulario">
             <input type="text" id="herramienta" class="form-control">
-            <button type="submit" class="boton-agregar btn btn-primary my-2">Agregar</button>
+            <button type="submit" class="boton-agregar btn btn-primary my-2" id="boton-multi-funcion">Agregar</button>
         </form>
 
         <div class="listaHerramientas mt-3" id="listaHerramientas">
