--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
         </nav>
     </header>
     <main class="cuerpo container mt-5">
-        <h2 class="titulo-lista-productos">
-            Lista de productos
+        <h2 class="titulo-lista-productos mt-3">
+            Lista de herramientas
         </h2>
-        <p class="parrafo-lista-productos my-2"> En esta sección puede editar o eliminar la herramienta seleccionada:
+        <p class="parrafo-lista-productos my-2"> En esta sección puede ingresar,editar o eliminar las herramientas que desea comprar:
         </p>
         <form id="formulario">
             <input type="text" id="herramienta" class="form-control">
@@ -44,7 +44,7 @@
 
         <div class="listaHerramientas mt-3" id="listaHerramientas">
             <div class="alert alert-secondary" role="alert">
-                <i class="icono-texto-alerta material-icons">
+                <i class="icono-texto-alerta">
                     home_repair_service
                 </i>
                 <b>Texto</b> - Estado
