Creada la validación para que el input en blanco no pueda ser ingresado

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <h2 class="titulo-lista-productos mt-3">
             Lista de herramientas
         </h2>
-        <p class="parrafo-lista-productos my-2"> En esta sección puede ingresar,editar o eliminar las herramientas que desea comprar:
+        <p class="parrafo-lista-productos my-2"> En esta sección puedes ingresar,editar o eliminar las herramientas que desea comprar:
         </p>
         <form id="formulario">
             <input type="text" id="herramienta" class="form-control">
